add the imgupload_test

--- a/crowdfunding/templates/index.html
+++ b/crowdfunding/templates/index.html
@@ -105,12 +105,29 @@ h3.break>a {
 				<div class="navbar-header">
 				  <a class="navbar-brand" href="index.html" style="font-size:32px;">尚筹网-创意产品众筹平台</a>
 				</div>
-            <div id="navbar" class="navbar-collapse collapse" style="float:right;">
+                  {% if request.user.is_authenticated %}
+                      <div id="navbar" class="navbar-collapse collapse" style="float:right;">
+                    <ul class="nav navbar-nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
+                                    class="glyphicon glyphicon-user"></i>{{ request.user.username }}<span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="{% url 'user:userinfo' %}"><i class="glyphicon glyphicon-scale"></i> 会员中心</a></li>
+                                <li><a href="#"><i class="glyphicon glyphicon-comment"></i> 消息</a></li>
+                                <li class="divider"></li>
+                                <li><a href="{% url 'user:logout' %}"><i class="glyphicon glyphicon-off"></i> 退出系统</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                  {% else %}
+                        <div id="navbar" class="navbar-collapse collapse" style="float:right;">
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{% url 'user:login' %}">登录</a></li>
                 <li><a href="{% url 'user:register' %}">注册</a></li>
               </ul>
             </div>
+                  {% endif %}
 			  </div>
 			</nav>
 
@@ -160,7 +177,7 @@ h3.break>a {
       <div class="row">
           {% for pro in all_project %}
         <div class="col-lg-4">
-          <img class="img-circle" src="{% static pro.project_img %}" alt="Generic placeholder image" style="width: 140px; height: 140px;">
+          <img class="img-circle" src="{{ pro.main_img.url }}" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>{{ pro.name }}</h2>
           <p>{{ pro.desc }}</p>
           <p><a class="btn btn-default" href="{% url 'project:project_detail' project_id=pro.id%}" role="button">项目详情 &raquo;</a></p>
@@ -175,7 +192,7 @@ h3.break>a {
 			<div class="box ui-draggable" id="mainBox">
 				<div class="mHd" style="">
 					<div class="path">
-						<a href="projects.html">更多...</a>
+						<a href="{% url 'project:project_list' %}">更多...</a>
 					</div>
 					<h3>
 						科技 <small style="color:#FFF;">开启智慧未来</small>
@@ -183,90 +200,30 @@ h3.break>a {
 				</div>
 				<div class="mBd" style="padding-top:10px;">
 			<div class="row">
+                {% for pro in tech_project %}
 				<div class="col-md-3">
 					<div class="thumbnail">
-						<img alt="300x200" src="{% static 'img/product-1.jpg' %}" />
+						<img alt="300x200" src="{{ pro.main_img.url }}" />
 						<div class="caption">
 							<h3 class="break">
-								<a href="project.html">活性富氢净水直饮机</a>
+								<a href="{% url 'project:project_detail' project_id=pro.id%}">{{ pro.name }}</a>
 							</h3>
                             <p>
-                                <div style="float:left;"><i class="glyphicon glyphicon-screenshot" title="目标金额" ></i> $20,000 </div>
-                                <div style="float:right;"><i title="截至日期" class="glyphicon glyphicon-calendar"></i> 2017-20-20 </div>
+                                <div style="float:left;"><i class="glyphicon glyphicon-screenshot" title="目标金额" ></i> {{ pro.target_money }} </div>
+                                <div style="float:right;"><i title="截至日期" class="glyphicon glyphicon-calendar"></i> {{ pro.get_finish_time }} </div>
                             </p>
                             <br>
 								<div class="progress" style="margin-bottom: 4px;">
-                                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                    <span >40% </span>
+                                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="{{ pro.get_rate }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ pro.get_rate }}%">
+                                    <span >{{ pro.get_rate }}% </span>
                                   </div>
                                 </div>
-                                <div><span style="float:right;"><i class="glyphicon glyphicon-star-empty" ></i></span>  <span ><i class="glyphicon glyphicon-user" title="支持人数"></i> 12345</span> </div>
+                                <div><span style="float:right;"><i class="glyphicon glyphicon-star-empty" ></i></span>  <span ><i class="glyphicon glyphicon-user" title="支持人数"></i> {{ pro.support_people }}</span> </div>
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-						<img alt="300x200" src="{% static 'img/product-2.gif' %}" />
-						<div class="caption">
-							<h3 class="break">
-								<a href="project.html">酷驰触控龙头，智享厨房黑科技</a>
-							</h3>
-                            <p>
-                                <div style="float:left;"><i class="glyphicon glyphicon-screenshot" title="目标金额" ></i> $20,000 </div>
-                                <div style="float:right;"><i title="截至日期" class="glyphicon glyphicon-calendar"></i> 2017-20-20 </div>
-                            </p>
-                            <br>
-								<div class="progress" style="margin-bottom: 4px;">
-                                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                    <span >40% </span>
-                                  </div>
-                                </div>
-                                <div><span style="float:right;"><i class="glyphicon glyphicon-star-empty" ></i></span>  <span ><i class="glyphicon glyphicon-user" title="支持人数"></i> 12345</span> </div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-						<img alt="300x200" src="{% static 'img/product-3.png' %}" />
-						<div class="caption">
-							<h3 class="break">
-								<a href="project.html">小熊猫鱼眼全景安防摄像机</a>
-							</h3>
-                            <p>
-                                <div style="float:left;"><i class="glyphicon glyphicon-screenshot" title="目标金额" ></i> $20,000 </div>
-                                <div style="float:right;"><i title="截至日期" class="glyphicon glyphicon-calendar"></i> 2017-20-20 </div>
-                            </p>
-                            <br>
-								<div class="progress" style="margin-bottom: 4px;">
-                                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                    <span >40% </span>
-                                  </div>
-                                </div>
-                                <div><span style="float:right;"><i class="glyphicon glyphicon-star-empty" ></i></span>  <span ><i class="glyphicon glyphicon-user" title="支持人数"></i> 12345</span> </div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="thumbnail">
-						<img alt="300x200" src="{% static 'img/product-4.jpg' %}" />
-						<div class="caption">
-							<h3 class="break">
-								<a href="project.html">一款精致的机械表</a>
-							</h3>
-                            <p>
-                                <div style="float:left;"><i class="glyphicon glyphicon-screenshot" title="目标金额" ></i> $20,000 </div>
-                                <div style="float:right;"><i title="截至日期" class="glyphicon glyphicon-calendar"></i> 2017-20-20 </div>
-                            </p>
-                            <br>
-								<div class="progress" style="margin-bottom: 4px;">
-                                  <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                                    <span >40% </span>
-                                  </div>
-                                </div>
-                                <div><span style="float:right;"><i class="glyphicon glyphicon-star-empty" ></i></span>  <span ><i class="glyphicon glyphicon-user" title="支持人数"></i> 12345</span> </div>
-						</div>
-					</div>
-				</div>
+                {% endfor %}
+
 			</div>
 				</div>
 			</div>
@@ -281,7 +238,7 @@ h3.break>a {
 			<div class="box ui-draggable" id="mainBox">
 				<div class="mHd" style="">
 					<div class="path">
-						<a href="projects.html">更多...</a>
+						<a href="{% url 'project:project_list' %}">更多...</a>
 					</div>
 					<h3>
 						设计 <small style="color:#FFF;">创意改变生活</small>
@@ -387,7 +344,7 @@ h3.break>a {
 			<div class="box ui-draggable" id="mainBox">
 				<div class="mHd" style="">
 					<div class="path">
-						<a href="projects.html">更多...</a>
+						<a href="{% url 'project:project_list' %}">更多...</a>
 					</div>
 					<h3>
 						农业 <small style="color:#FFF;">网络天下肥美</small>
