--- a/crowdfunding/templates/user/reg.html
+++ b/crowdfunding/templates/user/reg.html
@@ -82,7 +82,7 @@
                     if (data.res == 200){
                         // 跳转页面
                         {#location.href = {% url 'user:userinfo' %} // /user/#}
-                        window.location.href = '{% url 'user:login' %}'
+                        window.location.href = '{% url 'index' %}'
                     }
                     else
                     {
