--- a/crowdfunding/templates/user/login.html
+++ b/crowdfunding/templates/user/login.html
@@ -87,12 +87,14 @@
             $.post('/user/login/', params, function (data) {
                 // 用户名密码错误 {'res': 0}
                 // 登录成功 {'res': 1}
-                if (data.res == 0){
-                    $('#username').next().html('用户名或密码错误').show()
+                if (data.res == 200){
+                    window.location.href = '{% url "index" %}'
+
                 }
-                else (data.res == 200)
+                else
                 {
-                    window.location.href = '{% url "user:userinfo" %}'
+                    alert('登录失败')
+
                 }
             })
             return false
