--- a/crowdfunding/templates/startpro/start-step-1.html
+++ b/crowdfunding/templates/startpro/start-step-1.html
@@ -233,13 +233,19 @@
                 <div class="col-sm-10">
                     <ul style="list-style:none;padding-left:0;">
                         <li style="margin:10px 0">[手机]
-                            <span class="label-txt">手机</span> <span class="label-txt">快充</span>
+                            <span class="label-txt">贴膜</span>
+                            <span class="label-txt">充电器</span>
+                            <span class="label-txt">充电宝</span>
                         </li>
                         <li style="margin:10px 0">[数码]
-                            <span class="label-txt">摄像机</span> <span class="label-txt">kindle</span>
+                            <span class="label-txt">摄像机</span>
+                            <span class="label-txt">kindle</span>
+                            <span class="label-txt">照相机</span>
                         </li>
                         <li style="margin:10px 0">[电脑]
-                            <span class="label-txt">显示器</span> <span class="label-txt">键盘</span>
+                            <span class="label-txt">显示器</span>
+                            <span class="label-txt">键盘</span>
+                            <span class="label-txt">鼠标</span>
                         </li>
                     </ul>
                 </div>
