--- a/crowdfunding/templates/startpro/start-step-2.html
+++ b/crowdfunding/templates/startpro/start-step-2.html
@@ -236,42 +236,43 @@
                                       <div class="panel-body">
 
 		<div class="col-md-12 column">
-            <form class="form-horizontal">
+             <form class="form-horizontal" method="post" action="/startpro/projectrepay/" enctype="multipart/form-data">
+
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label">回报类型</label>
                 <div class="col-sm-10">
 
                      <label class="radio-inline">
-                      <input type="radio" name="RepayTypeOptions" id="inlineRadio1" value="reality"> 实物回报
+                      <input type="radio" name="repay_type" id="inlineRadio1" value="reality"> 实物回报
                     </label>
                     <label class="radio-inline">
-                      <input type="radio" name="RepayTypeOptions" id="inlineRadio2" value="virtual"> 虚拟物品回报
+                      <input type="radio" name="repay_type" id="inlineRadio2" value="virtual"> 虚拟物品回报
                     </label>
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label">支持金额（元）</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" style="width:100px;" id="support_money">
+                  <input type="text" class="form-control" style="width:100px;" id="support_money" name="support_money">
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label">回报内容</label>
                 <div class="col-sm-10">
-                  <textarea class="form-control" rows="5" id="repay_content" placeholder="简单描述回报内容，不超过200字"></textarea>
+                  <textarea class="form-control" rows="5" id="repay_content" name="repay_content" placeholder="简单描述回报内容，不超过200字"></textarea>
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label">说明图片</label>
                 <div class="col-sm-10">
-                  <button type="button" class="btn btn-primary btn-lg active">上传图片</button>
+                    <input type="file" name="repay_img" id="repay_img" value="上传图片" class="btn btn-primary btn-lg active">
                   <label class="control-label">支持jpg、jpeg、png、gif格式，大小不超过2M，建议尺寸：760*510px选择文件</label>
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label">回报数量（名）</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" style="width:100px;display:inline" id="repay_num">
+                  <input type="text" class="form-control" style="width:100px;display:inline" id="repay_num" name="repay_num">
                   <label class="control-label">“0”为不限回报数量</label>
                 </div>
               </div>
@@ -279,19 +280,19 @@
                 <label for="inputEmail3" class="col-sm-2 control-label">单笔限购</label>
                 <div class="col-sm-10">
                      <label class="radio-inline">
-                      <input type="radio" name="LimitBuyOptions" id="inlineRadio1" value="0"> 不限购
+                      <input type="radio" name="is_limit_buy" id="inlineRadio1" value="0"> 不限购
                     </label>
                     <label class="radio-inline">
-                      <input type="radio" name="LimitBuyOptions" id="inlineRadio2" value="1"> 限购
+                      <input type="radio" name="is_limit_buy" id="inlineRadio2" value="1"> 限购
                     </label>
-                    <input type="text" class="form-control" style="width:100px;display:inline" id="limit_buy_num">
+                    <input type="text" class="form-control" style="width:100px;display:inline" id="limit_buy_num" name="limit_buy_num">
                     <label class="radio-inline">默认数量为1，且不超过上方已设置的回报数量</label>
                 </div>
               </div>
               <div class="form-group">
                 <label class="col-sm-2 control-label">运费(元)</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" style="width:100px;display:inline" value="0" id="freight">
+                  <input type="text" class="form-control" style="width:100px;display:inline" value="0" id="freight" name="freight">
                   <label class="control-label">“0”为包邮</label>
                 </div>
               </div>
@@ -299,10 +300,10 @@
                 <label for="inputEmail3" class="col-sm-2 control-label">发票</label>
                 <div class="col-sm-10">
                      <label class="radio-inline">
-                      <input type="radio" name="ReceiptOptions" id="inlineRadio1" value="0"> 不可开发票
+                      <input type="radio" name="receipt" id="inlineRadio1" value="0"> 不可开发票
                     </label>
                     <label class="radio-inline">
-                      <input type="radio" name="ReceiptOptions" id="inlineRadio2" value="1"> 可开发票（包括个人发票和自定义抬头发票）
+                      <input type="radio" name="receipt" id="inlineRadio2" value="1"> 可开发票（包括个人发票和自定义抬头发票）
                     </label>
                 </div>
               </div>
@@ -312,14 +313,15 @@
                      <label class="radio-inline">
                       项目结束后
                     </label>
-                    <input type="text" class="form-control" style="width:100px;display:inline" id="repay_time">
+                    <input type="text" class="form-control" style="width:100px;display:inline" id="repay_time" name="repay_time">
                     <label class="radio-inline">天，向支持者发送回报</label>
                 </div>
               </div>
               <div class="form-group">
                 <label for="inputEmail3" class="col-sm-2 control-label"></label>
                 <div class="col-sm-10">
-                      <button type="button" class="btn btn-primary" id="btnRepaySubmit">确定</button>
+                    <input type="submit" class="btn btn-primary" value="提交">
+{#                      <button type="button" class="btn btn-primary" id="btnRepaySubmit">确定</button>#}
                       <button type="button" class="btn btn-default">取消</button>
                 </div>
               </div>
@@ -357,7 +359,6 @@
                 </div>
             </div>
         </div>
-        
 
         <div class="container" style="margin-top:20px;">
             <div class="row clearfix">
@@ -381,51 +382,51 @@
 	<script src="{% static 'script/docs.min.js' %}"></script>
     <script src="{% static 'script/back-to-top.js' %}"></script>
 
-      <script>
-        $(function () {
-            $('#btnRepaySubmit').click(function () {
-                repay_type = $("input[name='RepayTypeOptions']:checked").val();
-                support_money = $('#support_money').val()
-                repay_content = $('#repay_content').val()
+{#      <script>#}
+{#        $(function () {#}
+{#            $('#btnRepaySubmit').click(function () {#}
+{#                repay_type = $("input[name='RepayTypeOptions']:checked").val();#}
+{#                support_money = $('#support_money').val()#}
+{#                repay_content = $('#repay_content').val()#}
                 {#total_time = $('#total_time').val()说明图片#}
-                repay_num = $('#repay_num').val()
-                is_limit_buy = $("input[name='LimitBuyOptions']:checked").val();
-                limit_buy_num = $('#limit_buy_num').val()
-                freight = $('#freight').val()
-                receipt = $("input[name='ReceiptOptions']:checked").val();
-                repay_time = $('#repay_time').val()
-                csrf = $('input[name="csrfmiddlewaretoken"]').val()
-                // 发起ajax请求
-                params = {
-                    'repay_type':repay_type,
-                    'support_money':support_money,
-                    'repay_content':repay_content,
+{#                repay_num = $('#repay_num').val()#}
+{#                is_limit_buy = $("input[name='LimitBuyOptions']:checked").val();#}
+{#                limit_buy_num = $('#limit_buy_num').val()#}
+{#                freight = $('#freight').val()#}
+{#                receipt = $("input[name='ReceiptOptions']:checked").val();#}
+{#                repay_time = $('#repay_time').val()#}
+{#                csrf = $('input[name="csrfmiddlewaretoken"]').val()#}
+{#                // 发起ajax请求#}
+{#                params = {#}
+{#                    'repay_type':repay_type,#}
+{#                    'support_money':support_money,#}
+{#                    'repay_content':repay_content,#}
                     {#total_time = $('#total_time').val()说明图片#}
-                    'repay_num':repay_num,
-                    'is_limit_buy':is_limit_buy,
-                    'limit_buy_num':limit_buy_num,
-                    'freight':freight,
-                    'receipt':receipt,
-                    'repay_time':repay_time,
-                    'csrfmiddlewaretoken':csrf,
-                }
-                $.post('/startpro/projectrepay/', params, function (data) {
-                    // 用户名密码错误 {'res': 0}
-                    // 登录成功 {'res': 1}
-                    if (data.res == 0){
-                        $('#username').next().html('用户名或密码错误').show()
-                    }
-                    else (data.res == 200)
-                    {
-                        // 跳转页面
+{#                    'repay_num':repay_num,#}
+{#                    'is_limit_buy':is_limit_buy,#}
+{#                    'limit_buy_num':limit_buy_num,#}
+{#                    'freight':freight,#}
+{#                    'receipt':receipt,#}
+{#                    'repay_time':repay_time,#}
+{#                    'csrfmiddlewaretoken':csrf,#}
+{#                }#}
+{#                $.post('/startpro/projectrepay/', params, function (data) {#}
+{#                    // 用户名密码错误 {'res': 0}#}
+{#                    // 登录成功 {'res': 1}#}
+{#                    if (data.res == 0){#}
+{#                        $('#username').next().html('用户名或密码错误').show()#}
+{#                    }#}
+{#                    else (data.res == 200)#}
+{#                    {#}
+{#                        // 跳转页面#}
                         {#location.href = {% url 'user:userinfo' %} // /user/#}
-                        window.location.href = '{% url 'startpro:projectaccount' %}'
-
-                    }
-                })
-            })
-        })
-    </script>
+{#                        window.location.href = '{% url 'startpro:projectaccount' %}'#}
+{##}
+{#                    }#}
+{#                })#}
+{#            })#}
+{#        })#}
+{#    </script>#}
 
 
 	<script>
